--- a/src/app/layout/layouts/tutor/components/header/header.component.html
+++ b/src/app/layout/layouts/tutor/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-surface border-0 border-b border-solid border-light flex px-4 h-14 shadow-sm"
+  class="bg-surface border-0 border-b border-solid border-light flex px-4 h-14"
 >
   <div class="flex justify-center items-center gap-2">
     <a
