update something new

--- a/src/app/modules/admin/account/user-profile/user-profile.component.html
+++ b/src/app/modules/admin/account/user-profile/user-profile.component.html
@@ -153,6 +153,7 @@
         mat-flat-button
         [color]="'primary'"
         [disabled]="profileForm.disabled"
+        (click)="submit()"
       >
         <span *ngIf="!profileForm.disabled">
           {{ "Action.Save" | translate }}
